# chore-tracker-thing

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  dex.yaml  docker-compose.yml
.docker/: nginx.conf  stop-supervisor.sh  supervisord.conf
.husky/hooks/: pre-commit
.woodpecker/: Dockerfile  coverage.yml  validate.yml
src/: main.rs  test_environment.rs
src/domain/: household.rs  household_member.rs  invite.rs  invite_secret.rs  mod.rs  oidc_user.rs  recurrence_unit.rs  task.rs  todo.rs  user.rs
src/http/: mod.rs
src/http/api/: api_error.rs  mod.rs
src/http/api/guards/: logged_in_user.rs  mod.rs
src/http/api/household/: create.rs  edit.rs  get.rs  invite.rs  join.rs  leave.rs  mod.rs  response.rs
src/http/api/household/task/: complete.rs  create.rs  details.rs  edit.rs  get.rs  mod.rs  response.rs
src/http/error/: database_error.rs  mod.rs
src/http/oidc/: callback.rs  callback_query.rs  login.rs  logout.rs  mod.rs  oidc_error.rs  oidc_test_environment.rs
src/infrastructure/: access_control.rs  config.rs  database.rs  host.rs  mod.rs  oidc_client.rs  user.rs
src/migration/: m000001_create_oidc_user.rs  m000002_create_households.rs  m000003_add_column_display_name.rs  m000004_create_tasks.rs  m000005_create_todos.rs  m000006_create_invites.rs  m000007_add_column_joined_via_invite.rs  m20220101_000001_create_oidc_user.rs  mod.rs
web/: eslint.config.js  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  burger-menu.tsx  household-form.tsx  index.css  main.tsx  use-is-logged-in.tsx  use-user.tsx
web/src/components/: form-select.tsx  header.tsx  main-menu.css  main-menu.module.css  main-menu.tsx  overlay.css  overlay.tsx  select.tsx
web/src/domain/: household.tsx  task.tsx
web/src/global/: household-context.provider.tsx  household-context.tsx  household-contextt.tsx  main-menu-context.provider.tsx  main-menu.context.tsx  use-user.tsx
web/src/hooks/: use-household.tsx  useHousehold.tsx
web/src/hooks/api/: use-api.tsx
web/src/pages/create-household/: index.tsx  page.tsx
web/src/pages/create-task/: index.tsx  page.tsx
web/src/pages/household/: index.tsx  page.tsx
web/src/pages/login/: index.tsx  page.module.css  page.tsx
web/src/pages/settings/: index.tsx  page.tsx
