[package]
name = "chore-tracker-thing"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
dotenv = "0.15.0"
log = "0.4.22"
openid = "0.15.0"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
rocket = { version = "0.5.1", features = ["secrets", "json"] }
sea-orm = {version = "1.1.2", features = ["sqlx-postgres", "runtime-tokio-native-tls", "with-chrono", "with-json"]}
sea-orm-migration = {version = "1.1.2", features = ["sqlx-postgres", "runtime-actix-native-tls", "with-chrono", "with-json"]}
url = "2.5.2"
