[package]
name = "chore-tracker-thing"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.39"
dotenv = "0.15.0"
log = "0.4.22"
openid = "0.16.1"
pretty_env_logger = "0.5.0"
rand = "0.9.0"
rocket = { version = "0.5.1", features = ["secrets", "json"] }
rust-argon2 = "2.1.0"
sea-orm = { version = "1.1.2", features = ["mock", "sqlx-postgres", "runtime-tokio-native-tls", "with-chrono", "with-json", "with-uuid"] }
sea-orm-migration = { version = "1.1.2", features = ["sqlx-postgres", "runtime-actix-native-tls", "with-chrono", "with-json", "with-uuid"] }
url = "2.5.2"
uuid = { version = "1.11.0", features = ["v7"] }

[dev-dependencies]
husky-rs = "0.1.2"
fantoccini = "0.21.4"
testcontainers-modules = { version = "0.11.6", features = ["postgres", "blocking", "dex"], git = "https://github.com/testcontainers/testcontainers-rs-modules-community.git" }
tokio = { version = "*", features = ["process"] }
tempfile = "3.17.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
